--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,13 +1,12 @@
-html,
+html, 
 body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   background: url('/assets/images/login_bg.jpg') no-repeat center;
-  background-size: cover;
+  background-size: cover; 
 }
-
 .loginAndRegBox {
   width: 400px;
   height: 310px;
@@ -15,41 +14,34 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-50%);
 }
-
-.title-box {
+.title_box {
   height: 60px;
   background: url('/assets/images/login_title.png') no-repeat center;
 }
-
-.reg-box {
+.reg_box {
   display: none;
 }
 
 .layui-form {
   padding: 0 30px;
 }
-
 .links {
   display: flex;
   justify-content: flex-end;
 }
-
 .links a {
   font-size: 12px;
 }
-
 .layui-form-item {
   position: relative;
 }
-
 .layui-icon {
   position: absolute;
-  left: 10px;
   top: 10px;
+  left: 10px;
 }
-
 .layui-input {
   padding-left: 32px;
 }
