--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,29 +2,22 @@
   text-align: center;
   font-size: 12px;
 }
-
 .iconfont {
   margin-right: 8px;
 }
-
 .layui-icon {
-  margin-right: 8px;
-  margin-left: 20px;
+  margin: 0 8px 0 20px;
 }
-
+.layui-body {
+  overflow: hidden;
+}
 iframe {
   width: 100%;
   height: 100%;
 }
-
-.layui-body {
-  overflow: hidden;
-}
-
 a {
   transition: none !important;
 }
-
 .userinfo {
   height: 60px;
   line-height: 60px;
@@ -32,27 +25,21 @@ a {
   font-size: 12px;
   user-select: none;
 }
-
 .layui-side-scroll .userinfo {
   border-bottom: 1px solid #282b33;
 }
-
 .layui-nav-img {
   width: 40px;
   height: 40px;
 }
-
 .text-avatar {
   display: inline-block;
   width: 40px;
   height: 40px;
+  margin-right: 10px;
   background-color: #009688;
-  border-radius: 50%;
   line-height: 40px;
   text-align: center;
-  font-size: 20px;
   color: #fff;
-  position: relative;
-  top: 4px;
-  margin-right: 10px;
+  border-radius: 50%;
 }
